[Java] Removed unnecessary compiler/runtime flags on JDK 9+.